Fixed an alignment issue on login page

--- a/public/static/css/main.css
+++ b/public/static/css/main.css
@@ -274,3 +274,7 @@ table input {
     margin-left: auto;
     margin-right: auto;
 }
+/* Login */
+#login_form input {
+    width: 100%;
+}
